set up a quiz page with header and footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     </head>
 
     <body>
+        <header>
+            <div class="logo"><a href=""><img src="img/logo.jpg" alt="Logo" /><span class="name">BrainZap</span></a></div>
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li><a href="">Quiz 1</a></li>
+                    <li><a href="">Quiz 2</a></li>
+                    <li><a href="">Quiz 3</a></li>
+                    <li><a href="">Word Puzzle</a></li>
+                </ul>
+                <div class="menu-toggle">☰</div>
+            </nav>
+        </header>
 
         <div class="quiz-container">
             <div class="quiz-header">
@@ -52,6 +64,10 @@
             <!-- Navigation buttons will appear here -->
             <div id="navigation-container" class="navigation-container"></div>
         </div>
+
+        <footer>
+            
+        </footer>
 
         <script src="script.js"></script>
     </body>
