added footer styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
         </header>
 
-        <div class="quiz-container">
+        <div class="quiz-container content">
             <div class="quiz-header">
                 <h2>Trivia Quiz</h2>
                 <div class="quiz-controls">
@@ -66,7 +66,7 @@
         </div>
 
         <footer>
-            
+
         </footer>
 
         <script src="script.js"></script>
