Adjusted hero styling and added image background

--- a/index.html
+++ b/index.html
@@ -30,34 +30,36 @@
 
         <!-- Hero Section -->
     <section class="hero">
-        <h1>Welcome to Our Website</h1>
-        <p>Discover amazing content and explore our services tailored just for you.</p>
-        <a href="#navigation" class="scroll-btn">Explore More</a>
+        <div class="hero-container">
+            <h1>Jolt of Trivia never hurt anyone... Or Did it???</h1>
+            <a href="#navigation" class="scroll-btn">Are you brave enough?</a>
+            
+        </div>
         <a href="#navigation" class="scroll-arrow"></a>
     </section>
     
     <!-- Full Page Navigation Section -->
     <section id="navigation" class="full-nav">
         <div class="nav-container">
-            <h2 class="nav-title">Explore Our Services</h2>
+            <h2 class="nav-title">Check Out Our Quizzes</h2>
             <div class="nav-grid">
                 <div class="nav-item">
-                    <h3>Service One</h3>
+                    <h3>Geography</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
                     <a href="geography.html">Geography Quiz</a>
                 </div>
                 <div class="nav-item">
-                    <h3>Service Two</h3>
+                    <h3>History</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
                     <a href="history.html">History Quiz</a>
                 </div>
                 <div class="nav-item">
-                    <h3>Service Three</h3>
+                    <h3>Science</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
                     <a href="science.html">Science Quiz</a>
                 </div>
                 <div class="nav-item">
-                    <h3>Service Four</h3>
+                    <h3>Text Twist</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
                     <a href="wordpuzzle.html">Word Puzzle</a>
                 </div>
