Added styles for navigation on quiz pages. Fixed positioning of header element and quizzes.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <body>
         <header>
-            <div class="logo"><a href="index.html"><img src="img/logo.jpg" alt="Logo" /><span class="name">BrainZap</span></a></div>
-           
+            <div class="header-container">
+                <div class="logo"><a href="index.html"><img src="img/logo.jpg" alt="Logo" /><span class="name">BrainZap</span></a></div> 
+            </div>
         </header>
 
         <!-- Hero Section -->
