--- a/science.html
+++ b/science.html
@@ -24,16 +24,18 @@
 
     <body>
         <header>
-            <div class="logo"><a href="index.html"><img src="img/logo.jpg" alt="Logo" /><span class="name">BrainZap</span></a></div>
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="geography.html">Geography</a></li>
-                    <li><a href="history.html">History</a></li>
-                    <li class="active"><a href="#">Science</a></li>
-                    <li><a href="wordpuzzle.html">Word Puzzle</a></li>
-                </ul>
-                <div class="menu-toggle">☰</div>
-            </nav>
+            <div class="header-container">
+                <div class="logo"><a href="index.html"><img src="img/logo.jpg" alt="Logo" /><span class="name">BrainZap</span></a></div>
+                <nav class="navbar">
+                    <ul class="nav-links">
+                        <li><a href="geography.html">Geography</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li class="active"><a href="#">Science</a></li>
+                        <li><a href="wordpuzzle.html">Word Puzzle</a></li>
+                    </ul>
+                    <div class="menu-toggle">☰</div>
+                </nav>
+            </div>
         </header>
 
         <div class="quiz-container content">
