removed 'active' class from the menu and removed quiz category drop down

--- a/science.html
+++ b/science.html
@@ -30,7 +30,7 @@
                     <ul class="nav-links">
                         <li><a href="geography.html">Geography</a></li>
                         <li><a href="history.html">History</a></li>
-                        <li class="active"><a href="#">Science</a></li>
+                        <li><a href="#">Science</a></li>
                         <li><a href="wordpuzzle.html">Word Puzzle</a></li>
                     </ul>
                     <div class="menu-toggle">☰</div>
@@ -42,12 +42,6 @@
             <div class="quiz-header">
                 <h2>Trivia Quiz</h2>
                 <div class="quiz-controls">
-                    <select id="category-select">
-                        <option value="9">General Knowledge</option>
-                        <option value="22">Geography</option>
-                        <option value="23">History</option>
-                        <option value="17">Science & Nature</option>
-                    </select>
                     <select id="difficulty-select">
                         <option value="easy">Easy</option>
                         <option value="medium">Medium</option>
