changed file names

--- a/science.html
+++ b/science.html
@@ -65,7 +65,7 @@
             <p>Whatever</p>
         </footer>
 
-        <script src="js/script.js"></script>
+        <script src="js/trivia.js"></script>
         <script src="js/hamburger.js"></script>
     </body>
 </html>
